# Agent_Codebase

./: .gitignore  README.md  pyproject.toml
blinkit_diwali_campaign_synth_data/: users.csv
blinkit_diwali_campaign_synth_data/v1/: blinkit_diwali_users.csv
config/: example.yml  manifest.yml
data/instamart_diwali_campaign_raw/: campaigns.csv
demo_airflow_spark_redshift_s3/: README.md  requirements.txt
demo_airflow_spark_redshift_s3/dags/: events_daily_spark_redshift_s3.py
demo_airflow_spark_redshift_s3/spark_jobs/: events_etl.py
demo_airflow_spark_redshift_s3/sql/redshift/: ddl.sql  merge.sql
demo_airflow_spark_redshift_s3/tests/unit/: test_transform_dedupe.py
pipelines/drive_to_s3/: README.md  pyproject.toml
pipelines/drive_to_s3/drive_to_s3/: __init__.py  config.py
src/drive_to_s3/: README.md  __init__.py  auth.py  cli.py  config.py  drive_client.py  filters.py  manifest.py  pipeline.py  s3_client.py  state.py  utils.py
src/yaml_validator/: __init__.py  exceptions.py
tests/: test_manifest.py  test_utils.py
