[project]
name = "drive-to-s3-ingestion"
version = "0.1.0"
description = "Config-driven ingestion pipeline from Google Drive to Amazon S3"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "boto3>=1.34.0",
  "google-api-python-client>=2.125.0",
  "google-auth-httplib2>=0.2.0",
  "pydantic-settings>=2.5.2",
  "pydantic>=2.5.2",
  "pyyaml>=6.0.1",
  "structlog>=24.1.0",
  "click>=8.1.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.6"
]

[project.scripts]
drive-to-s3 = "drive_to_s3.cli:main"


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E4", "F5", "B", "I ]

[tool.pytest.ini_options]
addopts = "-q"
